--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="required_last_name">Please fill in your last name.</string>
     <string name="required_nickname">Please fill in your nickname.</string>
     <string name="required_phone">Please fill in your phone number.</string>
-    <string name="required_credentials">Please enter valid credentials</string>
+    <string name="required_credentials">Please enter credentials</string>
     <string name="password_try_again">Please re-enter your password and try again</string>
     <string name="login_slider_chat">You can chat with <font color="#c3ff01">friends, create groups</font> and even connect with your <font color="#c3ff01">favourite players!</font></string>
     <string name="logout_from_app">This will log you out of the app!</string>
