--- a/SportsSideKick/app/src/main/res/values-pl/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-pl/strings.xml
@@ -19,6 +19,7 @@
         <item>@string/wall</item>
         <item>@string/chat</item>
         <item>@string/news</item>
+        <item>@string/social</item>
         <item>@string/stats</item>
         <item>@string/rumours</item>
         <item>@string/radio</item>
