--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="video_chat">Video Chat</string>
     <string name="radio">Club Radio</string>
     <string name="tv">Club TV</string>
+    <string name="tickets">Tickets</string>
     <string name="store">Store</string>
     <string name="quiz">Quiz</string>
     <string name="fantasy">Fantasy</string>
@@ -27,6 +28,7 @@
         <item>@string/shop</item>
         <item>@string/tv</item>
         <item>@string/video_chat</item>
+        <item>@string/tickets</item>
     </string-array>
 
     <!-- Login & Register -->
