--- a/SportsSideKick/app/src/main/res/values-ru/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-ru/strings.xml
@@ -217,7 +217,7 @@
     <string name="post_title_hint">Нажмите здесь, чтобы ввести название вашего поста</string>
     <string name="post_body_hint">Нажмите здесь, чтобы начать писать свой пост…</string>
     <string name="post_create_tip_header">Чтобы создать новый пост:</string>
-    <string name="post_create_tip_body"><b>1.</b> Выберите изображение из галереи или сделайте новое изображение, выбрав один из двух значков в области изображения вверху (необязательно) \n <b>2.</b> Создайте заголовок, вписав заголовок. \n <b>3.</b> Напишите заметку во второе поле ввода.</string>
+    <string name="post_create_tip_body"><![CDATA[<b>1.</b> Выберите изображение из галереи или сделайте новое изображение, выбрав один из двух значков в области изображения вверху (необязательно) <br/> <b>2.</b> Создайте заголовок, вписав заголовок. <br/> <b>3.</b> Напишите заметку во второе поле ввода.]]></string>
     <string name="pin_title">Опубликовать на вашей стене?</string>
     <string name="pin_confirm">Хотите опубликовать это на своей стене?</string>
     <string name="pin_message_hint">Введите сообщение к прикрепленному посту…</string>
