change ‘days using ssk’ to ‘days using fanschat’

--- a/SportsSideKick/app/src/main/res/values/strings.xml
+++ b/SportsSideKick/app/src/main/res/values/strings.xml
@@ -94,7 +94,7 @@
     <string name="edit_photo">Edit Photo</string>
     <string name="done">Done</string>
     <string name="caps_level">Caps level</string>
-    <string name="days_using">Days using SSK</string>
+    <string name="days_using">Days using Fanschat</string>
     <string name="wall_posts">Wall posts</string>
     <string name="videos_watched">Videos watched</string>
     <string name="matches_home">Matches attended (home)</string>
